[package]
name = "rust_web"
version = "0.1.0"
authors = ["RimlTempest <riml.slime@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"